--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,9 +32,9 @@
     display: inline-block;
     vertical-align: middle;
     float: none;
-    width: 100%;
+    width: 100px;
     text-align: center;
-    margin: 0;
+    margin-right: 0.5em;
 
     img {
     	height: 100%;
